# rrrestic

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  Taskfile.yml  flake.nix  renovate.json
.github/workflows/: release.yaml
src/: config.rs  main.rs  runner.rs  telemetry.rs
