[package]
name = "rrrestic"
version = "0.3.0"
edition = "2024"

[dependencies]
opentelemetry_sdk = { version = "0.31.0", features = ["logs"] }
opentelemetry-otlp = { version = "0.31.0", features = ["logs"] }
opentelemetry-appender-tracing = "0.31.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.148"
shellexpand = "3.1.1"
toml = "0.9.10"
tracing = { version = "0.1.44", features = ["std"] }
tracing-subscriber = { version = "0.3.22", features = [
    "env-filter",
    "registry",
    "std",
    "fmt",
    "json",
] }
anyhow = "1.0.100"
chrono = { version = "0.4.42", features = ["serde"] }
